@@ -86,28 +86,33 @@ availableDataSets <- function(cancerType, date = NULL) {
     filesParentURL <- parentURL(lastReleaseDate, element = cancerType)  #downloadTCGA.r
     
     # get content of index page
-#     elementIndex <- tryCatch(readLines(filesParentURL), error = function(e) stop(paste("Probably dataset from this date needs authentication. \n \tCouldn't check available datasets' names.", 
-#         "\n \tTry manually on", filesParentURL)))
+    #     elementIndex <- tryCatch(readLines(filesParentURL), error = function(e) stop(paste("Probably dataset from this date needs authentication. \n \tCouldn't check available datasets' names.", 
+    #         "\n \tTry manually on", filesParentURL)))
     readHTMLTable(filesParentURL)[[1]][-c(1:2), c(2,4)] -> check
-    return(check[!grepl('md5', check[,1]) , ])
-
+    check[!grepl('md5', check[,1]) , ] -> check
+    check[!grepl('aux', check[,1]) , ] -> check
+    check[!grepl('mage-tab', check[,1]) , ] -> check
+    check[, 1] <- gsub("gdac.broadinstitute.org_", "", check[, 1])
+    na.omit(check) -> check
+    rownames(check) <- 1:nrow(check)
+    return(check[, c(2,1)])
     
     # stopped working suddenly after change of indexing of pages like that
     # http://gdac.broadinstitute.org/runs/stddata__2015_04_02/data/BRCA/20150402/ looks bad, but works fine....  need to fix this mess
-#     dataSetsName <- sapply(elementIndex, function(element) {
-#         gsub(".*gdac.broadinstitute.org(.*)\".*", "\\1", element)
-#     })
+    #     dataSetsName <- sapply(elementIndex, function(element) {
+    #         gsub(".*gdac.broadinstitute.org(.*)\".*", "\\1", element)
+    #     })
     
-#     dataSetsName <- sapply(elementIndex, function(element) {
-#         unlist(stri_extract_all_regex(pattern = "_.*tar\\.gz", str = element))
-#     })
-#     x <- dataSetsName %>% unlist() %>% na.omit() %>% unique()
-#     
-#     
-#     # cat available dataSets' names
-#     gsub(paste0("_", cancerType), cancerType, unique(grep(x = x, pattern = paste0("_", cancerType), value = TRUE))) %>%
-#         gsub('\\\".*', "", x    = .) %>%
-#         grep('md5', x = ., value = TRUE, invert = TRUE)
+    #     dataSetsName <- sapply(elementIndex, function(element) {
+    #         unlist(stri_extract_all_regex(pattern = "_.*tar\\.gz", str = element))
+    #     })
+    #     x <- dataSetsName %>% unlist() %>% na.omit() %>% unique()
+    #     
+    #     
+    #     # cat available dataSets' names
+    #     gsub(paste0("_", cancerType), cancerType, unique(grep(x = x, pattern = paste0("_", cancerType), value = TRUE))) %>%
+    #         gsub('\\\".*', "", x    = .) %>%
+    #         grep('md5', x = ., value = TRUE, invert = TRUE)
     
 }
 
@@ -123,7 +128,7 @@ availableDates <- function() {
             substring(first = 10, last = 19) %>% assign(x = ".availableDates", value = ., envir = .RTCGAEnv)
         
         get(".availableDates", envir = .RTCGAEnv) %>% gsub(pattern = "^[^0-9]{10}", replacement = "") %>% gsub(pattern = "_", replacement = "-", 
-            fixed = TRUE) %>% assign(x = ".availableDates2", value = ., envir = .RTCGAEnv)
+                                                                                                               fixed = TRUE) %>% assign(x = ".availableDates2", value = ., envir = .RTCGAEnv)
         ############################################ 
         
         xml2::read_html("http://gdac.broadinstitute.org/runs/stddata__latest/") %>% html_nodes("h3") %>% html_text() %>%
